--- a/Horizon.MagicCardTracker.Pwa/Shared/MainLayout.razor
+++ b/Horizon.MagicCardTracker.Pwa/Shared/MainLayout.razor
@@ -1,13 +1,9 @@
 @inherits LayoutComponentBase
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+    <NavMenu />
 
-    <div class="main">
-        <div class="content">
-            @Body
-        </div>
+    <div class="main content">
+        @Body
     </div>
 </div>
