--- a/Horizon.MagicCardTracker.Pwa/Shared/NavMenu.razor
+++ b/Horizon.MagicCardTracker.Pwa/Shared/NavMenu.razor
@@ -1,37 +1,55 @@
-﻿<div class="navbar navbar-dark">
-    <a class="navbar-brand" href="">MagicCardTracker</a>
-    <button class="navbar-toggler" @onclick="ToggleNavMenu">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-</div>
+﻿@inject NavigationManager _navigationManager
 
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <ul class="nav flex-column">
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-magnifying-glass" aria-hidden="true"></span> Search
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/collection">
-                <span class="oi oi-book" aria-hidden="true"></span> Collection
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/decks">
-                <span class="oi oi-box" aria-hidden="true"></span> Decks
-            </NavLink>
-        </li>
+<nav class="navbar navbar-dark navbar-expand-lg">
+
+  <img class="img-fluid" src="Logo_temp.png" style="height:45px"/>
+
+  <button class="navbar-toggler" @onclick="ToggleNavMenu">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="@_navbarClass navbar-collapse" @onclick="ToggleNavMenu">
+    <div class="flex-grow-1 d-flex align-items-center mx-4">
+        <span class="oi oi-magnifying-glass" aria-hidden="true"></span> 
+        <form class="form flex-grow-1" @onsubmit="@NavigateToSearch">
+        <input class="form-control border-0" 
+               type="search"
+               @bind="_queryString"
+               placeholder="Search for Magic cards...">
+        </form>
+    </div>
+    <ul class="navbar-nav mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <NavLink class="nav-link" Match="NavLinkMatch.All" href="/collection"> 
+            <span class="oi oi-book" aria-hidden="true"></span> Collection 
+        </NavLink> 
+      </li>
+      <li class="nav-item">
+        <NavLink class="nav-link" href="/decks"> 
+            <span class="oi oi-box" aria-hidden="true"></span> Decks 
+        </NavLink> 
+      </li>
     </ul>
-</div>
+  </div>
+</nav>
 
-@code {
-    private bool collapseNavMenu = true;
+@code 
+{
+    private bool _collapseNavMenu = true;
 
-    private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    private string _queryString;
+
+    private string _navbarClass => _collapseNavMenu ? "collapse" : null;
+
+    private void NavigateToSearch() 
+    {
+        if (!string.IsNullOrWhiteSpace(_queryString))
+        {
+            _navigationManager.NavigateTo("/search/" + _queryString);
+        }
+    }
 
     private void ToggleNavMenu()
     {
-        collapseNavMenu = !collapseNavMenu;
+        _collapseNavMenu = !_collapseNavMenu;
     }
 }
