Prepared Sets & Profile, minor redesign (WIP)

--- a/Horizon.MagicCardTracker.Pwa/Pages/Collection.razor
+++ b/Horizon.MagicCardTracker.Pwa/Pages/Collection.razor
@@ -16,7 +16,7 @@
 
 @if (_collection != null)
 {
-    <div class="row mt-4">
+    <div class="row">
         @foreach (var card in _collection)
             {
                 <div class="col-3 mt-2">
