--- a/Horizon.MagicCardTracker.Pwa/Pages/Search.razor
+++ b/Horizon.MagicCardTracker.Pwa/Pages/Search.razor
@@ -15,7 +15,7 @@
 
 @if(_searchResult != null)
 {
-    <div class="row mt-4">
+    <div class="row">
         @foreach (var card in _searchResult.Cards)
         {
             <div class="col-3 mt-2">
