--- a/Horizon.MagicCardTracker.Pwa/Shared/MainLayout.razor
+++ b/Horizon.MagicCardTracker.Pwa/Shared/MainLayout.razor
@@ -3,7 +3,7 @@
 <div class="page">
     <NavMenu />
 
-    <div class="main content">
+    <div class="mt-2 main container">
         @Body
     </div>
 </div>
