--- a/Horizon.MagicCardTracker.Pwa/Shared/NavMenu.razor
+++ b/Horizon.MagicCardTracker.Pwa/Shared/NavMenu.razor
@@ -18,14 +18,24 @@
         </form>
     </div>
     <ul class="navbar-nav mt-2 mt-lg-0">
-      <li class="nav-item active">
+      <li class="nav-item">
         <NavLink class="nav-link" Match="NavLinkMatch.All" href="/collection"> 
             <span class="oi oi-book" aria-hidden="true"></span> Collection 
         </NavLink> 
       </li>
       <li class="nav-item">
+        <NavLink class="nav-link" href="/sets"> 
+            <span class="oi oi-list-rich" aria-hidden="true"></span> Sets 
+        </NavLink> 
+      </li>
+      <li class="nav-item">
         <NavLink class="nav-link" href="/decks"> 
             <span class="oi oi-box" aria-hidden="true"></span> Decks 
+        </NavLink> 
+      </li>
+      <li class="nav-item">
+        <NavLink class="nav-link" href="/profile"> 
+            <span class="oi oi-pie-chart" aria-hidden="true"></span> Profile 
         </NavLink> 
       </li>
     </ul>
