--- a/Horizon.MagicCardTracker.Pwa/Shared/CardOverlay.razor
+++ b/Horizon.MagicCardTracker.Pwa/Shared/CardOverlay.razor
@@ -8,64 +8,71 @@
 
 @if (_isVisible)
 {
-    <div class="backdrop">
-    <div class="card-popup">
-        
-        <img class="img-fluid" src="@_cardImageUrl" />
-        <div class="content ml-4">
-            <LoadingIndicator IsBusy="@_isBusy"></LoadingIndicator>
-            @if (_card != null)
-            {
-            <div>
-                Trade-in value
-            </div>
-            <div class="mt-2 color-white-60">
-                <table class="w-100">
-                    <thead>
-                        <tr>
-                            <th></th>
-                            <th> EUR </th>
-                            <th> USD </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td> Standard </td>
-                            <td> @(_card.Prices?.StandardInEuros?.ToString() ?? "-") € </td>
-                            <td> @(_card.Prices?.StandardInDollars?.ToString() ?? "-") $ </td>
-                        </tr>
-                        <tr>
-                            <td> Foil </td>
-                            <td> @(_card.Prices?.FoiledInEuros?.ToString() ?? "-") € </td>
-                            <td> @(_card.Prices?.FoiledInDollars?.ToString() ?? "-") $ </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <label class="mt-2">In collection</label>
-            <div class="d-flex flex-column">
-                <span class="color-white-60">Standard</span>
-                <div class="d-flex justify-content-between">
-                    <div @onclick="@(() => AddStandardCards(-1))"><span class="oi oi-minus color-primary"
-                            aria-hidden="true"></span></div>
-                    <span>@_card.Count</span>
-                    <div @onclick="@(() => AddStandardCards(1))"><span class="oi oi-plus color-primary"
-                            aria-hidden="true"></span></div>
-                </div>
-                <span class="color-white-60">Foil</span>
-                <div class="d-flex justify-content-between align-items-center">
-                    <div @onclick="@(() => AddFoilCards(-1))"><span class="oi oi-minus color-primary"
-                            aria-hidden="true"></span></div>
-                    <span>@_card.FoilCount</span>
-                    <div @onclick="@(() => AddFoilCards(1))"><span class="oi oi-plus color-primary"
-                            aria-hidden="true"></span></div>
+<div class="backdrop">
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <div class="bg-elevated content">
+                    <img class="magic-card" src="@_cardImageUrl" />
                 </div>
             </div>
-            <div class="mt-2 d-flex justify-content-end">
-                <button class="btn btn-primary mr-2" @onclick="@UpdateCollection"> Save </button>
-                <button class="btn btn-outline-primary" @onclick="@Close">Close </button>
+            <div class="col-6">
+                <div class="bg-elevated content">
+                <LoadingIndicator IsBusy="@_isBusy"></LoadingIndicator>
+                @if (_card != null)
+                {
+                <div>
+                    Trade-in value
+                </div>
+                <div class="mt-2 color-white-60">
+                    <table class="w-100">
+                        <thead>
+                            <tr>
+                                <th></th>
+                                <th> EUR </th>
+                                <th> USD </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td> Standard </td>
+                                <td> @(_card.Prices?.StandardInEuros?.ToString() ?? "-") € </td>
+                                <td> @(_card.Prices?.StandardInDollars?.ToString() ?? "-") $ </td>
+                            </tr>
+                            <tr>
+                                <td> Foil </td>
+                                <td> @(_card.Prices?.FoiledInEuros?.ToString() ?? "-") € </td>
+                                <td> @(_card.Prices?.FoiledInDollars?.ToString() ?? "-") $ </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <label class="mt-2">In collection</label>
+                <div class="d-flex flex-column">
+                    <span class="color-white-60">Standard</span>
+                    <div class="d-flex justify-content-between">
+                        <div @onclick="@(() => AddStandardCards(-1))"><span class="oi oi-minus color-primary"
+                                aria-hidden="true"></span></div>
+                        <span>@_card.Count</span>
+                        <div @onclick="@(() => AddStandardCards(1))"><span class="oi oi-plus color-primary"
+                                aria-hidden="true"></span></div>
+                    </div>
+                    <span class="color-white-60">Foil</span>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div @onclick="@(() => AddFoilCards(-1))"><span class="oi oi-minus color-primary"
+                                aria-hidden="true"></span></div>
+                        <span>@_card.FoilCount</span>
+                        <div @onclick="@(() => AddFoilCards(1))"><span class="oi oi-plus color-primary"
+                                aria-hidden="true"></span></div>
+                    </div>
+                </div>
+                <div class="mt-2 d-flex justify-content-end">
+                    <button class="btn btn-primary mr-2" @onclick="@UpdateCollection"> Save </button>
+                    <button class="btn btn-outline-primary" @onclick="@Close">Close </button>
+                </div>
+                }
+                </div>
             </div>
-            }
         </div>
     </div>
 </div>
