--- a/Horizon.MagicCardTracker.Pwa/Shared/CardOverlay.razor.css
+++ b/Horizon.MagicCardTracker.Pwa/Shared/CardOverlay.razor.css
@@ -2,15 +2,13 @@
 .backdrop {
 
     position: fixed;
-    top: 0;
+    top: 61px;
     left: 0;
     right: 0;
     bottom: 0;
     display: flex;
     flex-direction: column;
-    background-color: #1B1C22;
-    justify-content: center;
-    align-items: center;
+    background-color: rgba(0, 0, 0, .8);
 }
 
 th {
