--- a/Horizon.MagicCardTracker.Pwa/Pages/QuickCollect.razor
+++ b/Horizon.MagicCardTracker.Pwa/Pages/QuickCollect.razor
@@ -3,6 +3,7 @@
 @using Horizon.MagicCardTracker.Contracts
 @using System.Threading
 @using MediatR
+@using Models
 @inject IMediator _mediator
 @implements IDisposable
 
@@ -12,25 +13,37 @@
     </div>
 </div>
 
-<form @onsubmit="@AddCardToCollectionAsync">
+<EditForm Model="_cardId" OnValidSubmit="@AddCardToCollectionAsync">
     <div class="row mt-2">
         <div class="col-4 content bg-elevated">
-            <input class="form-control w-100" @bind="_setCode" placeholder="Set Code" />
+            <input class="form-control w-100" @bind="_cardId.SetCode" placeholder="Set Code" />
         </div>
         <div class="col-4 content bg-elevated">
-            <input class="form-control w-100" @bind="_cardNumber" placeholder="Card number" />
+            <input class="form-control w-100" @bind="_cardId.CardNumber" placeholder="Card number" />
         </div>
-        <div class="col-4 content bg-elevated">
-            <input class="form-control w-100" @bind="_languageCode" placeholder="Language" />
-            <input type="submit" hidden />
+        <div class="col-4 content bg-elevated d-flex align-items-center">
+            <InputRadioGroup @bind-Value="_cardId.LanguageCode">
+                <div class="form-check">
+                    <InputRadio class="form-check-input" Value="LanguageCodes.English" />
+                    <img class="form-check-label img-fluid align-text-bottom" style="width: 32px;" src="EN.png"/>
+                </div>
+                <div class="form-check ms-2">
+                    <InputRadio class="form-check-input" Value="LanguageCodes.German" />
+                    <img class="form-check-label img-fluid align-text-bottom" style="width: 32px;" src="DE.png"/>
+                </div>
+            </InputRadioGroup>
+            <button type="submit" class="btn btn-primary ms-auto"> Add </button>
         </div>
     </div>
-</form>
+</EditForm>
 
 <div class="row mt-4">
-    @foreach (var card in _quickCollectionStack)
+    @foreach (var card in _quickCollectionStack.Reverse())
     {
-        <div class="col-3 mt-2">
+        <div class="col-3 mt-2 position-relative">
+            <span class="position-absolute top-0 start-50 translate-middle badge rounded-pill bg-danger">
+                @card.TotalCount
+            </span>
             <img class="img-fluid" style="border-radius: 5%;" src="@(card.ImageUrl)"
             @onclick="@(async () => await OpenDetailsAsync(card))" />
         </div>
@@ -42,17 +55,13 @@
 
 @code {
 
-    private string _setCode;
-
-    private string _cardNumber;
-
-    private string _languageCode = "de";
+    private CardIdentity _cardId = new CardIdentity { LanguageCode = LanguageCodes.German };
 
     private CancellationTokenSource _cts = new CancellationTokenSource();
 
     private bool _isLoading;
 
-    private List<CollectedCard> _quickCollectionStack = new List<CollectedCard>();
+    private HashSet<CollectedCard> _quickCollectionStack = new HashSet<CollectedCard>();
 
     private CardOverlay _cardOverlay;
 
@@ -64,8 +73,13 @@
 
     private async Task AddCardToCollectionAsync()
     {
+        if (!_cardId.IsValid)
+        {
+            return;
+        }
+
         _isLoading = true;
-        var card = await _mediator.Send(new AddCardByNumber(_setCode, _cardNumber, _languageCode), _cts.Token);
+        var card = await _mediator.Send(new AddCardByNumber(_cardId.SetCode, _cardId.CardNumber, _cardId.LanguageCode), _cts.Token);
         _quickCollectionStack.Add(card);
         _isLoading = false;
     }
@@ -73,5 +87,18 @@
     private Task OpenDetailsAsync(Card card)
     {
         return _cardOverlay.OpenAsync(card);
+    }
+
+    private class CardIdentity
+    {
+        public string SetCode { get; set; }
+
+        public string CardNumber { get; set; }
+
+        public string LanguageCode { get; set; }
+
+        public bool IsValid => !string.IsNullOrWhiteSpace(SetCode)
+                            && !string.IsNullOrWhiteSpace(CardNumber)
+                            && !string.IsNullOrWhiteSpace(LanguageCode);
     }
 }
