--- a/Horizon.MagicCardTracker.Pwa/Shared/NavMenu.razor
+++ b/Horizon.MagicCardTracker.Pwa/Shared/NavMenu.razor
@@ -11,7 +11,7 @@
   </button>
   <div class="@_navbarClass navbar-collapse" @onclick="ToggleNavMenu">
     <div class="flex-grow-1 d-flex align-items-center mx-4">
-      <span class="oi oi-magnifying-glass" aria-hidden="true"></span>
+      <i class="bi bi-search"></i>
       <form class="form flex-grow-1" @onsubmit="@NavigateToSearch">
         <input class="form-control border-0" type="search" @bind="_queryString" placeholder="Search for Magic cards...">
       </form>
@@ -19,22 +19,22 @@
     <ul class="navbar-nav mt-2 mt-lg-0">
       <li class="nav-item">
         <NavLink class="nav-link" Match="NavLinkMatch.All" href="/collection">
-          <span class="oi oi-book" aria-hidden="true"></span> Collection
+          <i class="bi bi-book"></i> Collection
         </NavLink>
       </li>
       <li class="nav-item">
         <NavLink class="nav-link" href="/sets">
-          <span class="oi oi-list-rich" aria-hidden="true"></span> Sets
+          <i class="bi bi-collection"></i> Sets
         </NavLink>
       </li>
       <li class="nav-item">
         <NavLink class="nav-link" href="/decks">
-          <span class="oi oi-box" aria-hidden="true"></span> Decks
+          <i class="bi bi-box-seam"></i>  Decks
         </NavLink>
       </li>
       <li class="nav-item">
         <NavLink class="nav-link" href="/profile">
-          <span class="oi oi-pie-chart" aria-hidden="true"></span> Profile
+          <i class="bi bi-pie-chart-fill"></i> Profile
         </NavLink>
       </li>
     </ul>
