--- a/Horizon.MagicCardTracker.Pwa/Shared/MainLayout.razor
+++ b/Horizon.MagicCardTracker.Pwa/Shared/MainLayout.razor
@@ -1,9 +1,9 @@
 @inherits LayoutComponentBase
 
-<div class="page">
+<div class="vh-100 d-flex flex-column">
     <NavMenu />
 
-    <div class="mt-2 main container">
+    <div class="mt-2 flex-grow-1 container d-flex flex-column">
         @Body
     </div>
 </div>
